--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -42,6 +43,13 @@
       <artifactId>mssql-jdbc</artifactId>
       <version>11.2.0.jre17</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>pdfbox</artifactId>
+      <version>2.0.29</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -69,10 +77,9 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.9.11</version>
-        <configuration>
-          <mainClass>com.example.erpdemo.HelloApplication</mainClass>
-        </configuration>
+        <version>3.2.0</version> <configuration>
+        <mainClass>com.example.erpdemo.HelloApplication</mainClass>
+      </configuration>
       </plugin>
     </plugins>
   </build>
