--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,13 @@
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>21</version>
     </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
@@ -32,6 +34,7 @@
       <artifactId>controlsfx</artifactId>
       <version>11.2.1</version>
     </dependency>
+
     <dependency>
       <groupId>net.synedra</groupId>
       <artifactId>validatorfx</artifactId>
@@ -45,10 +48,17 @@
     </dependency>
 
     <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
       <version>2.0.29</version>
     </dependency>
+
 
   </dependencies>
 
