--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,33 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
-    <junit.version>5.10.2</junit.version>
   </properties>
 
   <dependencies>
-
+    <!-- JavaFX (Windows) -->
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-base</artifactId>
+      <version>21</version>
+      <classifier>win</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-graphics</artifactId>
+      <version>21</version>
+      <classifier>win</classifier>
+    </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
       <version>21</version>
+      <classifier>win</classifier>
     </dependency>
-
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
       <version>21</version>
+      <classifier>win</classifier>
     </dependency>
 
     <dependency>
@@ -34,62 +46,56 @@
       <artifactId>controlsfx</artifactId>
       <version>11.2.1</version>
     </dependency>
-
     <dependency>
       <groupId>net.synedra</groupId>
       <artifactId>validatorfx</artifactId>
       <version>0.5.0</version>
     </dependency>
-
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
       <version>11.2.0.jre17</version>
     </dependency>
-
-    <dependency>
-      <groupId>com.sun.mail</groupId>
-      <artifactId>javax.mail</artifactId>
-      <version>1.6.2</version>
-    </dependency>
-
     <dependency>
       <groupId>org.apache.pdfbox</groupId>
       <artifactId>pdfbox</artifactId>
       <version>2.0.29</version>
     </dependency>
-
-
   </dependencies>
 
   <build>
     <plugins>
+      <!-- Derleyici -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
+        <configuration><release>21</release></configuration>
       </plugin>
 
+      <!-- Manifest'e Main-Class yaz -->
       <plugin>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-maven-plugin</artifactId>
-        <version>0.0.8</version>
-        <executions>
-          <execution>
-            <id>default-cli</id>
-            <configuration>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+          <archive>
+            <manifest>
               <mainClass>com.example.erpdemo.HelloApplication</mainClass>
-            </configuration>
-          </execution>
-        </executions>
+              <addClasspath>false</addClasspath>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
 
+      <!-- (opsiyonel) mvn exec:java -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.2.0</version> <configuration>
-        <mainClass>com.example.erpdemo.HelloApplication</mainClass>
-      </configuration>
+        <version>3.2.0</version>
+        <configuration>
+          <mainClass>com.example.erpdemo.HelloApplication</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
