Add external db.properties support for database configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 db.url=jdbc:sqlserver://SEYYIDOTER;databaseName=SirketDB;encrypt=true;trustServerCertificate=true;
-db.user=SA
+db.user=sa
 db.password=Password1
 
 # E-posta ayarlar?
